[Hardware][Fix] text-align

--- a/Hardware/blur/src/components/Weather.css
+++ b/Hardware/blur/src/components/Weather.css
@@ -8,25 +8,25 @@
 .messageInfo {
     font-size: 180%;
     font-weight: 1000;
-    text-align: right;
+    text-align: left;
 }
 
 .tempInfo {
     font-size: 180%;
     font-weight: 1000;
-    text-align: right;
+    text-align: left;
 }
 
 .weatherInfo {
     font-size: 180%;
     font-weight: 1000;
-    text-align: right;
+    text-align: left;
 }
 
 .cityInfo {
     font-size: 180%;
     font-weight: 1000;
-    text-align: right;
+    text-align: left;
     
 }
 
